[package]
name = "standalone-node-template"
version = "4.0.3-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "LGPL-3.0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "standalone-node-template"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"]}
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

sc-cli = { version = "0.37.0", default-features = false }
sp-core = { version = "29.0.0", default-features = false }
sc-executor = { version = "0.33.0", default-features = false }
sc-network = { version = "0.35.0", default-features = false }
sc-service = { version = "0.36.0" , default-features = false}
sc-telemetry = { version = "16.0.0", default-features = false }
sc-keystore = { version = "26.0.0", default-features = false }
sc-chain-spec = { version = "28.0.0", default-features = false }
sc-offchain = { version = "30.0.0", default-features = false }
sc-statement-store = { version = "11.0.0 ", default-features = false }
sc-transaction-pool = { version = "29.0.0", default-features = false }
sc-transaction-pool-api = { version = "29.0.0", default-features = false }
sc-consensus-aura = { version = "0.35.0", default-features = false }
sp-consensus-aura = { version = "0.33.0", default-features = false }
sp-consensus = { version = "0.33.0", default-features = false }
sc-consensus = { version = "0.34.0", default-features = false }
sc-consensus-grandpa = { version = "0.20.0", default-features = false }
sp-consensus-grandpa = { version = "14.0.0", default-features = false }
sc-client-api = { version = "29.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-io = { version = "31.0.0", default-features = false }
sp-timestamp = { version = "27.0.0", default-features = false }
sp-inherents = { version = "27.0.0", default-features = false }
sp-keyring = { version = "32.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
pallet-transaction-payment = { version = "29.0.0", default-features = false }
cumulus-primitives-core = { version = "0.8.0", default-features = false }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.20.3", features = ["server"] }
sc-rpc = { version = "30.0.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sc-rpc-api = { version = "0.34.0", default-features = false }
sp-blockchain = { version = "29.0.0", default-features = false }
sp-block-builder = { version = "27.0.0", default-features = false }
sc-basic-authorship = { version = "0.35.0", default-features = false }
substrate-frame-rpc-system = { version = "29.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "31.0.0", default-features = false }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "29.0.0", default-features = false }
frame-benchmarking-cli = { version = "33.0.0", default-features = false }

# Local Dependencies
standalone-template-runtime = { version = "4.0.3-dev", path = "../runtime" }
sygma-rpc = { path = "../../../rpc", default-features = false }
sygma-runtime-api = { path = "../../../runtime-api", default-features = false }

# CLI-specific dependencies
try-runtime-cli = { version = "0.39.0", default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", default-features = false }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"standalone-template-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["standalone-template-runtime/try-runtime", "try-runtime-cli/try-runtime"]
