[package]
name = "standalone-template-runtime"
version = "4.0.3-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "LGPL-3.0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.4.1", default-features = false }
primitive-types = { version = "0.12", default-features = false, features = ["scale-info", "serde_no_std"] }
hex = { version = "0.4.3", default-features = false }
funty = { version = "2.0.0", default-features = false }
fixed = {version = "1.23.0", default-features = false }

pallet-assets = { version = "30.0.0", default-features = false }
pallet-aura = { version = "28.0.0", default-features = false }
pallet-balances = { version = "29.0.0", default-features = false }
pallet-grandpa = { version = "29.0.0", default-features = false }
pallet-insecure-randomness-collective-flip = { version = "17.0.0", default-features = false }
pallet-sudo = { version = "29.0.0", default-features = false }
pallet-timestamp = { version = "28.0.0", default-features = false }
pallet-transaction-payment = { version = "29.0.0", default-features = false }
frame-support = { version = "29.0.0", default-features = false }
frame-system = { version = "29.0.0", default-features = false }
frame-try-runtime = { version = "0.35.0", default-features = false, optional = true }
frame-executive = { version = "29.0.0", default-features = false }
sp-api = { version = "27.0.0", default-features = false }
sp-block-builder = { version = "27.0.0", default-features = false }
sp-consensus-aura = { version = "0.33.0", default-features = false }
sp-consensus-grandpa = { version = "14.0.0", default-features = false }
sp-core = { version = "29.0.0", default-features = false }
sp-inherents = { version = "27.0.0", default-features = false }
sp-offchain = { version = "27.0.0", default-features = false }
sp-runtime = { version = "32.0.0", default-features = false }
sp-session = { version = "28.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "27.0.0", default-features = false }
sp-version = { version = "30.0.0", default-features = false }
pallet-session = { version = "29.0.0", default-features = false }
pallet-collator-selection = { version = "10.0.0", default-features = false }
sp-genesis-builder = { version = "0.8.0", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "27.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "29.0.0", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { version = "29.0.0", default-features = false, optional = true }
frame-system-benchmarking = { version = "29.0.0", default-features = false, optional = true }

# Polkadot
xcm = { version = "8.0.0", package = "staging-xcm", default-features = false }
xcm-builder = { version = "8.0.0", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "8.0.1", package = "staging-xcm-executor", default-features = false }
polkadot-parachain-primitives = { version = "7.0.0", default-features = false }

# Local Dependencies
sygma-basic-feehandler = { path = "../../../basic-fee-handler", default-features = false }
sygma-percentage-feehandler = { path = "../../../percentage-fee-handler", default-features = false }
sygma-traits = { path = "../../../traits", default-features = false }
sygma-bridge = { path = "../../../bridge", default-features = false }
sygma-access-segregator = { path = "../../../access-segregator", default-features = false }
sygma-fee-handler-router = { path = "../../../fee-handler-router", default-features = false }
sygma-runtime-api = { path = "../../../runtime-api", default-features = false }
pallet-parachain-info = { path = "../../../parachain-info", default-features = false }

[build-dependencies]
substrate-wasm-builder = { version = "18.0.0", default-features = false }

[features]
default = ["std"]
std = [
	"frame-try-runtime?/std",
	"frame-system-benchmarking?/std",
	"frame-benchmarking?/std",
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime/std",
	"pallet-assets/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-session/std",
	"pallet-collator-selection/std",
	"sygma-basic-feehandler/std",
	"sygma-percentage-feehandler/std",
	"sygma-traits/std",
	"sygma-bridge/std",
	"sygma-access-segregator/std",
	"sygma-fee-handler-router/std",
	"sygma-runtime-api/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sp-genesis-builder/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"polkadot-parachain-primitives/std",
	"primitive-types/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"sygma-bridge/runtime-benchmarks",
	"sygma-access-segregator/runtime-benchmarks",
	"sygma-basic-feehandler/runtime-benchmarks",
	"sygma-percentage-feehandler/runtime-benchmarks",
	"sygma-fee-handler-router/runtime-benchmarks",
]
try-runtime = [
	"frame-try-runtime/try-runtime",
	"frame-executive/try-runtime",
	"frame-system/try-runtime",
	"frame-support/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-assets/try-runtime",
	"sygma-basic-feehandler/try-runtime",
	"sygma-percentage-feehandler/try-runtime",
	"sygma-bridge/try-runtime",
	"sygma-access-segregator/try-runtime",
	"sygma-fee-handler-router/try-runtime",
]
